# ai-code-summary

./: .env.default  .gitignore  README.md  ai-code-summary.md  pyproject.toml  run_end_to_end.py  setup.cfg
ai_code_summary/: env_variables.py
ai_code_summary/ai/: summary.py  summary_test.py
ai_code_summary/code/: gitignore_pathspec.py  gitignore_pathspec_test.py
ai_code_summary/files/: file_manager.py  file_manager_test.py
ai_code_summary/markdown/: export.py  export_test.py
